env name change

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: myenv
+name: stable_matching_env
 channels:
   - anaconda
   - defaults
@@ -101,4 +101,4 @@ dependencies:
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.11=h7f8727e_4
   - zstd=1.4.9=haebb681_0
-prefix: /opt/anaconda/anaconda3/envs/myenv
+prefix: /opt/anaconda/anaconda3/envs/stable_matching_env
